front-end configured waiting for api

--- a/BlazorToDoTasks.Client/appsettings.json
+++ b/BlazorToDoTasks.Client/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ApiUrls": {
-    "TasksApi": "Teste"
+    "TasksApi": "http://teste.com.br"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
