crud with endpoint created

--- a/BlazorToDoTasks.Client/appsettings.json
+++ b/BlazorToDoTasks.Client/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ApiUrls": {
-    "TasksApi": "http://teste.com.br"
+    "TasksApi": "http://localhost:45115"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
